# test-asan-in-ci

./: main.c
.github/workflows/: testing.yml
both-nested-with-external/: .copier-answers.yml
both-nested-with-external/calculator-project/: CMakeLists.txt  README.md
both-nested-with-external/calculator-project/include/operations/: addition.h  division.h  multiplication.h  subtraction.h
both-nested-with-external/calculator-project/src/calculator/: CMakeLists.txt  main.c
both-nested-with-external/calculator-project/src/operations/: CMakeLists.txt  addition.c  division.c  multiplication.c  subtraction.c
both-nested-with-external/calculator-project/test/operations/: CMakeLists.txt  test_addition.c  test_division.c  test_multiplication.c  test_subtraction.c
